--- a/merrimackcspage/public/manifest.json
+++ b/merrimackcspage/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MCC Webpage",
+  "name": "Merrimack Computer Club Webpage",
   "icons": [
     {
       "src": "favicon.ico",
