--- a/merrimackcspage/package.json
+++ b/merrimackcspage/package.json
@@ -7,6 +7,7 @@
     "@mantine/form": "^7.3.1",
     "@mantine/hooks": "^7.3.0",
     "@react-oauth/google": "^0.12.1",
+    "@tabler/icons-react": "^2.44.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
+    "tabler-icons-react": "^1.56.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
