--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
     "tabler-icons-react": "^1.56.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
