--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
     "tabler-icons-react": "^1.56.0",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
